fix: 요일별로 메뉴 추천을 진행하도록 수정